[workspace]
resolver = "3"
members = ["emucore"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }
itertools = { version = "0.15.0", default-features = false }
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.28.0"
syn = "2.0.117"
thiserror = { version = "2.0.18", default-features = false }
toml = "1.1.2"

[profile.release]
lto = "fat"
codegen-units = 1
