[workspace]
resolver = "3"
members = ["emucore", "emucore-macros"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ahash = "0.8.12"
arrayvec = { version = "0.7.6", default-features = false }
itertools = { version = "0.15.0", default-features = false }
quote = "1.0.45"
rstest = "0.26.1"
strum_macros = "0.28.0"
syn = "2.0.117"
thiserror = { version = "2.0.18", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
