[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
# fastrand = "2.3.0"
# rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
# serde_with = "3.14.1"
# softbuffer = "0.4.6"
toml = "0.9.7"
# winit = {version = "0.30.12", features = ["serde"]}
# winit_input_helper = "0.17.0"