[package]
name = "emucore"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
toml.workspace = true

[dependencies]
arrayvec.workspace = true
itertools.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
